--- a/src/components/searchStyles.css
+++ b/src/components/searchStyles.css
@@ -44,3 +44,9 @@ button:hover {
     scale: calc(1.05);
     cursor: pointer;
 }
+
+.fade-out {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
